# farfor_test_task

./: .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
api/: urls.py
api/checks/: filters.py  serializers.py  tests.py  urls.py  views.py
core/apps/checks/: admin.py  apps.py  constants.py  managers.py  models.py  services.py
core/apps/checks/migrations/: 0001_initial.py  0002_alter_check_options.py  0003_alter_check_type.py
core/apps/checks/templates/: client_check.html  kitchen_check.html
core/apps/printers/: admin.py  apps.py  managers.py  models.py
core/apps/printers/fixtures/: printers.json
core/apps/printers/migrations/: 0001_initial.py  0002_alter_printer_options_alter_printer_unique_together.py  0003_alter_printer_check_type.py
core/project/: urls.py
core/project/settings/: local.example.py  main.py
storage/redis/: dump.rdb
